--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         </div>
     </header>
 
+    <main>
+        <div class="failures">
+            <div class="img">
+                <img src="/images/person.png" alt="" height="300px">
+            </div>
+            <div>
+                <h3>My failures of previous year </h3>
+            </div>
+        </div>
+    </main>
+
     
 </body>
 </html>
