failure section done

--- a/index.html
+++ b/index.html
@@ -16,19 +16,37 @@
             <p class="common-para">
                 There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words
             </p>
-            <button>Contact Us</button>
+            <button type="button">Contact Us</button>
         </div>
     </header>
 
     <main>
-        <div class="failures">
+        <section class="failures">
             <div class="img">
-                <img src="/images/person.png" alt="" height="300px">
+                <img src="images/person.png" alt="" width="450px" height="600px">
             </div>
             <div>
-                <h3>My failures of previous year </h3>
+                <h3 class="failures-title">My failures of <br> previous year </h3>
+                <p class="common-para">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+
+                <p class="common-para"> <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="5 0 20 20" fill="none">
+                    <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> Contrary to popular belief, is not simply.</p>
+                <p class="common-para"> <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="5 0 20 20" fill="none">
+                    <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> Contrary to popular belief.</p>
+                <p class="common-para"> <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="5 0 20 20" fill="none">
+                    <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> Contrary to popular , is not simply.</p>
+                <p class="common-para"> <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="5 0 20 20" fill="none">
+                    <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> Contrary to popular belief, is not simply.</p>
+                <p class="common-para"> <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="5 0 20 20" fill="none">
+                    <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> Contrary to popular simply.</p>
+
             </div>
-        </div>
+        </section>
     </main>
 
     
