--- a/index.html
+++ b/index.html
@@ -47,6 +47,32 @@
 
             </div>
         </section>
+
+        <section class="plan">
+            <h2 class="plan-title">My Plans</h2>
+            <div class="skills">
+                <div class="skills-item">
+                    <img src="images/icons/web.png" alt="">
+                    <h3 class="skills-title">Web Development</h3>
+                    <p class="common-para">I want to start</p>
+                </div>
+                <div class="skills-item">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skills-title">Javascript</h3>
+                    <p class="common-para">I want to learn</p>
+                </div>
+                <div class="skills-item">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3 class="skills-title">Smoking Habit</h3>
+                    <p class="common-para">I want to end</p>
+                </div>
+                <div class="skills-item">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3 class="skills-title">Ecommerce</h3>
+                    <p class="common-para">I want to develop</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     
