call section done

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                 </div>
             </div>
         </section>
+
+        <section class="call">
+            <h2 class="call-title">Awlays keep a positive <br> mindset</h2>
+            <button class="button">call now</button>
+        </section>
     </main>
 
     
