--- a/index.html
+++ b/index.html
@@ -78,6 +78,31 @@
             <h2 class="call-title">Awlays keep a positive <br> mindset</h2>
             <button class="button">call now</button>
         </section>
+
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="footer-left">
+                <h3>Future</h3>
+                <p>
+                There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words
+                </p>
+                <p>Email: info@gmail.com</p>
+                <p>Phone: 01500 00 00 00</p>
+                <div class="social-icons">
+                    <a href="#"><img src="images/icons/fb.png" alt="Facebook"></a>
+                    <a href="#"><img src="images/icons/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="images/icons/youtube.png" alt="YouTube"></a>
+                </div>
+            </div>
+
+            <div class="footer-right">
+                <h3>Subscribe</h3>
+                <input type="email" placeholder="Enter your email">
+                <button>Subscribe</button>
+            </div>
+        </div>
+        </footer>
+
     </main>
 
     
